--- a/aplicacao/contest/src/main/resources/templates/autor/autor_meus_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_meus_trabalhos.html
@@ -1,157 +1,206 @@
 <!DOCTYPE html>
 <html>
-  <head>
-   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title>Constest - Controle de Eventos de Submissão</title>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-		<!-- CSS  -->
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-		<link th:href="@{/webjars/materialize/0.97.6/dist/css/materialize.min.css}" type="text/css" rel="stylesheet" media="screen,projection" />
-		<link th:href="@{/webjars/font-awesome/4.6.3/css/font-awesome.min.css}" type="text/css" rel="stylesheet" />
-		<link th:href="@{/css/style.css}" type="text/css" rel="stylesheet" media="screen,projection" />
-		<link th:href="@{/css/time-line-style.css}" type="text/css" rel="stylesheet" media="screen,projection" />
-  </head>
-  <body>
-    <div th:include="fragments/header :: header"></div>
-    <div class="container page">
-      <div th:include="fragments/autor_menu_navegacao :: autor_menu_navegacao"></div>
-      <div>
-        <div th:if="${naoHaTrabalhos}" id="error_area" class="row chip red white-text" th:text="#{NAO_HA_TRABALHOS}">
-          <i class="material-icons">close</i>
-        </div>
-        <div th:if="${eventoVazioError}" id="error_area" class="row chip red white-text" th:text="#{ID_EVENTO_VAZIO_ERROR}">
-          <i class="material-icons">close</i>
-        </div>
-        <div th:if="${erroAoCadastrar}" id="error_area" class="row chip red white-text" th:text="#{ERRO_CADASTRO_TRABALHO}">
-          <i class="material-icons">close</i>
-        </div>
-        <div th:if="${sucessoEnviarTrabalho}" id="success_area" class="row chip green white-text" th:text="#{TRABALHO_ENVIADO}">
-          <i class="material-icons">close</i>
-        </div>
-        <div th:if="${erroExcluir}" id="success_area" class="row chip green white-text" th:text="#{ERRO_EXCLUIR_TRABALHO}">
-          <i class="material-icons">close</i>
-        </div>
-      </div>
-      <div class="col s12" th:if="${not #lists.isEmpty(eventos)}">
-        
-        <div class="col s12 m7" th:each="evento,iter : ${eventos}">
-          <div class="card horizontal">
-            <div class="card-stacked">
-              <div th:include="fragments/evento_timeline :: evento-timeline(${evento})"></div>
-              <div class="card-action" th:if="${trabalhosEvento[__${iter.index}__]} == 'NAO_TEM_REVISAO'">
-                  <a th:if="${evento.isPeriodoInicial()} or ${evento.isPeriodoFinal()}" th:href="@{'/autor/enviarTrabalhoForm/' + ${evento.id}}" class="waves-effect waves-light btn green">Enviar Novo Trabalho</a>
-                         <a th:unless="${evento.isPeriodoInicial()} or ${evento.isPeriodoFinal()}" class="btn grey white-text">Fora do Prazo de Envio de Trabalho</a>
-                         <a th:href="@{'/autor/listarTrabalhos/'+ ${evento.id}}" class="waves-effect waves-light btn yellow">Listar Trabalhos</a>
-             </div>
-            </div>
-          </div>
-        </div>
-        
-      </div>
-      <!-- 
-            <div class="row col s12 center">
-              <ul class="pagination">
-                <li class="disabled"><a href="#"><i class="material-icons">chevron_left</i></a></li>
-                <li class="active"><a href="#">1</a></li>
-                <li class="waves-effect"><a href="#">2</a></li>
-                <li class="waves-effect"><a href="#"><i class="material-icons">chevron_right</i></a></li>
-              </ul>
-            </div>
-      -->
-    </div>
-   	<div th:include="fragments/footer :: footer"></div>
-   	<script type="text/javascript" th:src="@{/js/modernizr.js}"></script>
-    <script type="text/javascript" th:src="@{/js/timeline.main.js}"></script>
-    <script type="text/javascript">
-      $(document).ready(function(){
-        //Inicialização dos elementos no JS
-        //Parallax BG
-        $('.parallax').parallax();
-        
-        //sideNav
-        $(".button-collapse").sideNav();
-        
-        //Tooltips
-        $('.tooltipped').tooltip({delay: 50});
-        
-        //select_initializer
-        $('select').material_select();
-        
-        //datepicker
-        $('.datepicker').pickadate({
-          selectMonths: true, // Creates a dropdown to control month
-          selectYears: 15, // Creates a dropdown of 15 years to control year
-          //Persnonalizando nomes dos meses do ano
-          monthsFull: [ 'Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro' ],
-          //Persnonalizando nomes dos dias da semana
-          weekdaysFull: [ 'Domingo', 'Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado' ],
-          weekdaysShort: [ 'Dom', 'Seg', 'Ter', 'Qua', 'Qui', 'Sex', 'Sab' ],
-          weekdaysLetter: [ 'D', 'S', 'T', 'Q', 'Q', 'S', 'S' ],
-          today: 'Hoje',
-          clear: 'Limpar',
-          close: 'Fechar'
-        });
-        
-        //Trata as datas na tela org_editar_eventos 
-        var calendarioSubmissaoInicial = "#prazo_submissao_inicial";
-        var calendarioSubmissaoFinal = "#prazo_submissao_final";
-        var calendarioRevisaoInicial = "#prazo_revisao_inicial";
-        var calendarioRevisaoFinal = "#prazo_revisao_final";
-        
-        function habilitarCalendario(calendario){
-          $(calendario).removeAttr( "disabled" );
-        }
-        
-        function desabilitarCalendario(calendario){
-          $(calendario).attr( "disabled", true );
-          $(calendario).pickadate("clear");
-        }
-        
-        function definirDataMinimaCalendario(calendario, dataMin){
-          var picker = getPicker(calendario);
-          picker.set("min", dataMin);
-        }
-        
-        function getPicker(idCalendario){
-          var $input = $(idCalendario).pickadate();
-          var picker = $input.pickadate("picker");
-          return picker;
-        }
-        
-        function configurarCalendario(idCalendarioInicial, idCalendarioFinal){
-          var picker = getPicker(idCalendarioInicial);
-          var dataAtual = picker.get();
-          var umDia = 1;
-          
-          var dataMinima = new Date(dataAtual);
-          dataMinima.setDate(dataMinima.getDate()+umDia);
-                
-          if (dataAtual.length == 0) {
-            desabilitarCalendario(idCalendarioFinal);
-          } else {
-            habilitarCalendario(idCalendarioFinal);       
-            
-            definirDataMinimaCalendario(idCalendarioFinal, dataMinima);
-          }
-        }
-        
-        $(calendarioSubmissaoInicial).on("change",function(){
-          configurarCalendario(calendarioSubmissaoInicial, calendarioSubmissaoFinal);
-        });
-        
-        $(calendarioSubmissaoFinal).on("change",function(){
-          configurarCalendario(calendarioSubmissaoFinal, calendarioRevisaoInicial);
-        });
-        
-        $(calendarioRevisaoInicial).on("change",function(){
-          configurarCalendario(calendarioRevisaoInicial, calendarioRevisaoFinal);
-        });
-        
-        //Inicialização do Modal excluir Evento
-        $('.modal-trigger').leanModal();
-        
-      });
-    </script>
-  </body>
+<head>
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, maximum-scale=1.0" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Constest - Controle de Eventos de Submissão</title>
+<link rel="stylesheet"
+	href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+<!-- CSS  -->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet" />
+<link
+	th:href="@{/webjars/materialize/0.97.6/dist/css/materialize.min.css}"
+	type="text/css" rel="stylesheet" media="screen,projection" />
+<link th:href="@{/webjars/font-awesome/4.6.3/css/font-awesome.min.css}"
+	type="text/css" rel="stylesheet" />
+<link th:href="@{/css/style.css}" type="text/css" rel="stylesheet"
+	media="screen,projection" />
+<link th:href="@{/css/time-line-style.css}" type="text/css"
+	rel="stylesheet" media="screen,projection" />
+</head>
+<body>
+	<div th:include="fragments/header :: header"></div>
+	<div class="container page">
+		<div
+			th:include="fragments/autor_menu_navegacao :: autor_menu_navegacao"></div>
+		<div>
+			<div th:if="${naoHaTrabalhos}" id="error_area"
+				class="row chip red white-text" th:text="#{NAO_HA_TRABALHOS}">
+				<i class="material-icons">close</i>
+			</div>
+			<div th:if="${eventoVazioError}" id="error_area"
+				class="row chip red white-text" th:text="#{ID_EVENTO_VAZIO_ERROR}">
+				<i class="material-icons">close</i>
+			</div>
+			<div th:if="${erroAoCadastrar}" id="error_area"
+				class="row chip red white-text" th:text="#{ERRO_CADASTRO_TRABALHO}">
+				<i class="material-icons">close</i>
+			</div>
+			<div th:if="${sucessoEnviarTrabalho}" id="success_area"
+				class="row chip green white-text" th:text="#{TRABALHO_ENVIADO}">
+				<i class="material-icons">close</i>
+			</div>
+			<div th:if="${erroExcluir}" id="success_area"
+				class="row chip green white-text" th:text="#{ERRO_EXCLUIR_TRABALHO}">
+				<i class="material-icons">close</i>
+			</div>
+		</div>
+		<div th:unless="${#lists.isEmpty(eventos)}" class="row holder center"></div>
+		<div id="itemContainer" class="col s12" th:if="${not #lists.isEmpty(eventos)}">
+
+			<div class="col s12 m7" th:each="evento,iter : ${eventos}">
+				<div class="card horizontal">
+					<div class="card-stacked">
+						<div
+							th:include="fragments/evento_timeline :: evento-timeline(${evento})"></div>
+						<div class="card-action"
+							th:if="${trabalhosEvento[__${iter.index}__]} == 'NAO_TEM_REVISAO'">
+							<a
+								th:if="${evento.isPeriodoInicial()} or ${evento.isPeriodoFinal()}"
+								th:href="@{'/autor/enviarTrabalhoForm/' + ${evento.id}}"
+								class="waves-effect waves-light btn green">Enviar Novo
+								Trabalho</a> <a
+								th:unless="${evento.isPeriodoInicial()} or ${evento.isPeriodoFinal()}"
+								class="btn grey white-text">Fora do Prazo de Envio de
+								Trabalho</a> <a th:href="@{'/autor/listarTrabalhos/'+ ${evento.id}}"
+								class="waves-effect waves-light btn yellow">Listar Trabalhos</a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+		<div th:unless="${#lists.isEmpty(eventos)}" class="row holder center"></div>
+	</div>
+	<div th:include="fragments/footer :: footer"></div>
+	<script type="text/javascript" th:src="@{/js/modernizr.js}"></script>
+	<script type="text/javascript" th:src="@{/js/timeline.main.js}"></script>
+	<script type="text/javascript" th:src="@{/js/jPages.min.js}"></script>
+	<script type="text/javascript">
+		$(document)
+				.ready(
+						function() {
+							//Inicialização dos elementos no JS
+							//Parallax BG
+							$('.parallax').parallax();
+
+							//sideNav
+							$(".button-collapse").sideNav();
+
+							//Tooltips
+							$('.tooltipped').tooltip({
+								delay : 50
+							});
+
+							//select_initializer
+							$('select').material_select();
+
+							//datepicker
+							$('.datepicker').pickadate(
+									{
+										selectMonths : true, // Creates a dropdown to control month
+										selectYears : 15, // Creates a dropdown of 15 years to control year
+										//Persnonalizando nomes dos meses do ano
+										monthsFull : [ 'Janeiro', 'Fevereiro',
+												'Março', 'Abril', 'Maio',
+												'Junho', 'Julho', 'Agosto',
+												'Setembro', 'Outubro',
+												'Novembro', 'Dezembro' ],
+										//Persnonalizando nomes dos dias da semana
+										weekdaysFull : [ 'Domingo', 'Segunda',
+												'Terça', 'Quarta', 'Quinta',
+												'Sexta', 'Sábado' ],
+										weekdaysShort : [ 'Dom', 'Seg', 'Ter',
+												'Qua', 'Qui', 'Sex', 'Sab' ],
+										weekdaysLetter : [ 'D', 'S', 'T', 'Q',
+												'Q', 'S', 'S' ],
+										today : 'Hoje',
+										clear : 'Limpar',
+										close : 'Fechar'
+									});
+
+							//Trata as datas na tela org_editar_eventos 
+							var calendarioSubmissaoInicial = "#prazo_submissao_inicial";
+							var calendarioSubmissaoFinal = "#prazo_submissao_final";
+							var calendarioRevisaoInicial = "#prazo_revisao_inicial";
+							var calendarioRevisaoFinal = "#prazo_revisao_final";
+
+							function habilitarCalendario(calendario) {
+								$(calendario).removeAttr("disabled");
+							}
+
+							function desabilitarCalendario(calendario) {
+								$(calendario).attr("disabled", true);
+								$(calendario).pickadate("clear");
+							}
+
+							function definirDataMinimaCalendario(calendario,
+									dataMin) {
+								var picker = getPicker(calendario);
+								picker.set("min", dataMin);
+							}
+
+							function getPicker(idCalendario) {
+								var $input = $(idCalendario).pickadate();
+								var picker = $input.pickadate("picker");
+								return picker;
+							}
+
+							function configurarCalendario(idCalendarioInicial,
+									idCalendarioFinal) {
+								var picker = getPicker(idCalendarioInicial);
+								var dataAtual = picker.get();
+								var umDia = 1;
+
+								var dataMinima = new Date(dataAtual);
+								dataMinima
+										.setDate(dataMinima.getDate() + umDia);
+
+								if (dataAtual.length == 0) {
+									desabilitarCalendario(idCalendarioFinal);
+								} else {
+									habilitarCalendario(idCalendarioFinal);
+
+									definirDataMinimaCalendario(
+											idCalendarioFinal, dataMinima);
+								}
+							}
+
+							$(calendarioSubmissaoInicial).on(
+									"change",
+									function() {
+										configurarCalendario(
+												calendarioSubmissaoInicial,
+												calendarioSubmissaoFinal);
+									});
+
+							$(calendarioSubmissaoFinal).on(
+									"change",
+									function() {
+										configurarCalendario(
+												calendarioSubmissaoFinal,
+												calendarioRevisaoInicial);
+									});
+
+							$(calendarioRevisaoInicial).on(
+									"change",
+									function() {
+										configurarCalendario(
+												calendarioRevisaoInicial,
+												calendarioRevisaoFinal);
+									});
+
+							//Inicialização do Modal excluir Evento
+							$('.modal-trigger').leanModal();
+							
+							//Inicialização do Jpages para realizar a paginação
+					        $("div.holder").jPages({
+					        	containerID : "itemContainer",
+					        	perPage: 2
+					        });
+						});
+	</script>
+</body>
 </html>
